Subir Reto 2 - Ciclo 4

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.data.mongodb.authentication-database=none
+#spring.data.mongodb.database=tiroas
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.host=localhost
+#spring.jpa.hibernate.ddl-auto = create
+spring.data.mongodb.uri=mongodb+srv://sa:sa@cluster0.cmy0p.mongodb.net/libreria?retryWrites=true&w=majority
 server.port=80
+
