--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,14 @@
-#Archivo application.properties: Se ubica en la carpeta resources del proyecto, alli se 
-#especifica informaci\u00f3n de configuraci\u00f3n del proyecto relacionada con puertos, contexto 
-#de la aplicaci\u00f3n o path,informaci\u00f3n de conexi\u00f3n a base de datos y otros.
-#server.port=8086
-#spring.data.mongodb.authentication-database=admin
-#spring.data.mongodb.auto-index-creation=true
-#spring.data.mongodb.host=localhost
-#spring.data.mongodb.port=27017
-#spring.data.mongodb.database=as_retovivo
+
+##Aplica para conexion local
+spring.data.mongodb.authentication-database=none
+##spring.data.mongodb.username=root
+##spring.data.mongodb.password=root
+spring.data.mongodb.database=tiroas
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
 #spring.jpa.hibernate.ddl-auto = create
-#logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
-spring.data.mongodb.uri=mongodb+srv://sa:sa@cluster0.cmy0p.mongodb.net/libreria
-server.port=80
+server.port=8080
+
+#Mongo Atlas  
+#spring.data.mongodb.uri=mongodb+srv://serpent:6esbsltdua@cluster0.gwaxu.mongodb.net/tiroas
+#server.port=8080
