--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,2 @@
-
-##Aplica para conexion local
-spring.data.mongodb.authentication-database=none
-##spring.data.mongodb.username=root
-##spring.data.mongodb.password=root
-spring.data.mongodb.database=tiroas
-spring.data.mongodb.port=27017
-spring.data.mongodb.host=localhost
-#spring.jpa.hibernate.ddl-auto = create
-server.port=8080
-
-#Mongo Atlas  
-#spring.data.mongodb.uri=mongodb+srv://serpent:6esbsltdua@cluster0.gwaxu.mongodb.net/tiroas
-#server.port=8080
+spring.data.mongodb.uri=mongodb+srv://sa:sa@cluster0.cmy0p.mongodb.net/libreria
+server.port=80
